# hello-python

./: .gitignore  LICENSE  README.md  environment.yml  logging.json  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python-conda-app.yml  python-conda-tests.yml
config/: logging.json
data/: README.md
hello/: calculator.py  dev.py
hello/foo/: bar.py
hello_python/: calculator.py
hello_python/foo_subpackage/: bar.py
notebooks/: some_notebook.ipynb
scripts/: calculator_demo.py  env_var_setup.sh  main.py
tests/: test_calculator.py
