[project]
name = "hello-python"
version = "0.0.1"
authors = [
    {name = "Jane Doe", email = "jane.doe@example.com" }
]
description = "Sample python repository for robotics research"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/olamarre/hello-python.git"

[build-system]
requires = ["setuptools>=52", "wheel"]
build-backend = "setuptools.build_meta"

# make sure the 'tests' directory is not mistaken for another package
[tool.setuptools.packages.find]
exclude = ['tests']

[tool.pytest.ini_options]
addopts = "--cov"  # prints a coverage report after a test
testpaths = [
    "tests",
]
markers = [
    "integtest: marks tests as integration (deselect with '-m 'not integtest'')",
]
