[metadata]
name = hello-python
version = 0.0.1
authors = [
    {name = "Jane Doe", email = "jane.doe@example.com" },]
description = Sample python repository for robotics research
long_description = file : README.md
long_description_content_type = text/markdown
readme = "README.md"
license = { file="LICENSE" }

[project.urls]
"Homepage" = "https://github.com/olamarre/hello-python.git"

[options]
packages = find:

[options.packages.find]
exclude=tests*  # Make sure the tests/ directory isn't confused for a pkg

[tool:pytest]
addopts = --cov=hello  # prints a coverage report after a test
# testpaths =
#     tests
#     integration